feat: adicionado regras para leitura e deletar usuario.
